--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/logo.svg
+    - assets/logo.png
+    - assets/logo@2x.png
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
