--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_duration_picker: "^1.0.0"
   intl: ^0.15.7
   tuple: ^1.0.2
+  duration: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
