--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_duration_picker: "^1.0.0"
+  intl: ^0.15.7
+  tuple: ^1.0.2
+  duration: ^2.0.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -24,6 +29,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
