--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,9 +2,12 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
+
     }
 
     dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
         classpath 'com.android.tools.build:gradle:3.1.2'
     }
 }
