--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   flutter_duration_picker: "^1.0.0"
   tuple: ^1.0.2
   duration: ^2.0.0
+  flutter_crashlytics: ^0.1.3
+
 
 
   # The following adds the Cupertino Icons font to your application.
