--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ build/
 **/android/gradlew.bat
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
+**/android/app/src/main/res/values/API_KEY.xml
 
 # iOS/XCode related
 **/ios/**/*.mode1v3
