--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  rxdart: ^0.19.0
+  rxdart: ^0.20.0
+  bloc: ^0.8.0
+  flutter_bloc: ^0.5.0
+  equatable: ^0.1.5
+  meta: ^1.1.6
+  http: ^0.12.0
 
 dev_dependencies:
   flutter_test:
