--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ build/
 **/android/gradlew.bat
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
+**/android/app/src/main/res/values/API_KEYS.xml
 
 # iOS/XCode related
 **/ios/**/*.mode1v3
@@ -66,6 +67,7 @@ build/
 **/ios/Flutter/flutter_assets/
 **/ios/ServiceDefinitions.json
 **/ios/Runner/GeneratedPluginRegistrant.*
+**/ios/Runner/secret_keys.plist
 
 # Exceptions to above rules.
 !**/ios/**/default.mode1v3
