--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   flutter_duration_picker: "^1.0.0"
   tuple: ^1.0.2
   duration: ^2.0.0
+  google_maps_flutter: ^0.0.3+3
+  geolocator: ^2.1.1
+  
   flutter_crashlytics: ^0.2.0
 
 
