--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,28 +13,32 @@ environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
 
 dependencies:
-  intl: ^0.15.7
   flutter:
     sdk: flutter
+
+  intl: ^0.15.7
   flutter_duration_picker: "^1.0.0"
   tuple: ^1.0.2
   duration: ^2.0.0
   google_maps_flutter: ^0.0.3+3
   geolocator: ^2.1.1
-  
   flutter_crashlytics: ^0.2.0
-
-
+  rxdart: ^0.20.0
+  bloc: ^0.8.0
+  flutter_bloc: ^0.5.1
+  equatable: ^0.1.5
+  meta: ^1.1.6
+  http: ^0.12.0
+  url_launcher: ^4.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  url_launcher: ^4.0.1
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
