--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,9 @@ dependencies:
   duration: ^2.0.0
   google_maps_flutter: ^0.0.3+3
   geolocator: ^2.1.1
-  
-  flutter_crashlytics: ^0.2.0
 
+  flutter_crashlytics: ^0.2.0
+  shared_preferences: ^0.4.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
