--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   meta: ^1.1.6
   http: ^0.12.0
   url_launcher: ^4.0.1
+  flutter_secure_storage: ^3.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
