--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   http: ^0.12.0
   url_launcher: ^4.0.1
   shared_preferences: ^0.4.3
-  test: ^1.5.1
+  mockito: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
